@@ -1,5 +1,10 @@
 2005-03-18  Sam Steingold  <sds@gnu.org>
 
+	* spvw.d: DYNAMIC_FFI does not imply that dlopen() is present,
+	need to check for HAVE_DLOPEN or WIN32_NATIVE
+
+2005-03-18  Sam Steingold  <sds@gnu.org>
+
 	* modules/regexp/regex.c: check HAVE_ALLOCA_H before #include <alloca.h>
 
 2005-03-18  Bruno Haible  <bruno@clisp.org>
